@@ -127,6 +127,7 @@
 * Airwallex: Update authorization_from method to include payment intent ID on refunds [yunnydang] #5400
 * New Credit Card Sol: Add new bin set for Sol credit card [javierpedrozaing] #5380
 * Credit Card Sol: Update card name to `tarjeta_sol` instead of `sol` [javierpedrozaing] #5404
+* Credit Card Sol: Update tarjeta sol support for Decidir and Decidir plus gateways [javierpedrozaing] #5405
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
